# qeclab

./: README.md  pyproject.toml
examples/: threshold.py
src/qeclab/: __init__.py  decoder.py  toric.py
tests/: test_toric.py
