[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qeclab"
version = "0.1.0"
description = "Toric-code quantum error correction with a minimum-weight perfect matching decoder and threshold experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "networkx>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY"]
